# store-api0

./: .env  .gitignore  API.md  Cargo.toml  README.md  apidocumentation-markdown.md  apikey.md  apinext.md  build.rs  config.yaml  dev.sh  ecosystem.config.js  endpoint_service.proto  endpoints.db  endpoints.db.wal  endpoints.md  endpoints.yaml  repomix-output.md  stripe.guide
.github/workflows/: ci.yml  deploy.yml
config-samples/: config.yaml
samples/: analyze-job-fit.yaml  cvenom_api_endpoints_spec copy.yaml  cvenom_api_endpoints_spec.yaml  cvenom_endpoints.yaml  divess.yaml  gpecs.yaml  output.yaml  pickbazar_endpoints.yaml  sample_endpoints.yaml
scratch/: debug_db.py  debug_db.rs
sql/: rls.sql  schema.sql
src/: add_api_group.rs  admin_auth.rs  admin_credit_handler.rs  check_is_default_group.rs  config.rs  db_pool.rs  delete_api_group.rs  delete_endpoint.rs  downstream_auth_handler.rs  formatter.rs  generate_api_key.rs  generate_consumer_key_handler.rs  get_api_groups.rs  get_api_key_usage.rs  get_api_keys_status.rs  get_api_usage_logs.rs  get_authorized_domains.rs  get_credit_balance_handler.rs  get_user_preferences.rs  grpc_server.rs  health_check.rs  http_server.rs  lib.rs  log_api_usage.rs  main.rs  manage_endpoint.rs  mcp_client_id_handler.rs  mcp_tools_handler.rs  models.rs  payment_handler.rs  payment_service.rs  record_api_key_usage.rs  reset_user_preferences.rs  revoke_all_api_keys_handler.rs  revoke_api_key_handler.rs  server.rs  tests_credit.rs  update_api_group.rs  update_credit_balance_handler.rs  update_user_preferences.rs  (+3 more)
src/admin/: mod.rs  model_config.rs  user_roles.rs
src/api/: config_upload.rs  domains.rs  endpoint_manage.rs  group_add.rs  group_delete.rs  group_get.rs  group_update.rs  key_consumer.rs  key_consumer_self_service.rs  key_generate.rs  key_revoke.rs  key_revoke_all.rs  key_status.rs  key_validate.rs  mod.rs  providers.rs  reference_upload.rs  tenant_management.rs  tenant_name.rs  tenant_usage.rs  usage_get_logs.rs  usage_key.rs  usage_log.rs
src/email/: mod.rs
src/endpoint_store/: add_user_api_group.rs  api_key_management.rs  authorized_domains.rs  cleanup.rs  db_helpers.rs  delete_user_api_group.rs  delete_user_endpoint.rs  downstream_auth_management.rs  errors.rs  get_api_groups_by_email.rs  get_create_user_api_groups.rs  get_default_api_groups.rs  get_endpoints_by_group_id.rs  init.rs  manage_single_endpoint.rs  mcp_tools_management.rs  mod.rs  models.rs  reference_data.rs  replace_user_api_groups.rs  tenant_management.rs  user_preferences.rs  utils.rs
src/infra/: auth.rs  db.rs  mod.rs  models.rs
src/mcp/: client_id.rs  downstream_auth.rs  mod.rs  tools.rs
src/middleware/: api_key_auth.rs  error_handler.rs  mod.rs
src/payment/: admin.rs  balance.rs  mod.rs  payment.rs  tests.rs  transactions.rs  update_balance.rs
src/user/: get.rs  mod.rs  reset.rs
src/whatsapp/: channel.rs  dead_letter.rs  mod.rs  session.rs
test/: create_key.sh  curl_api_usage.sh  get_endpoints_test.sh  query.sh  test-log-api-usage.sh  test_api_key.sh  test_multi_key.sh  test_user_preferences.sh  upload.sh  upload_grpc.sh  upload_http.sh
tests/: api_scenarios.rs
