[package]
name = "sensei-store"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
duckdb = { version = "1.1.1", features = ["bundled"] }
futures = "0.3.31"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# grpc_logger = { path = "../grpc-logger" }
async-stream = "0.3.6"
uuid = { version = "1.13.1", features = ["v4"] }
grpc_logger = "0.10.0"
serde_json = "1.0.139"
actix-web = "4.9.0"
actix-cors = "0.7.0"
base64 = "0.22.1"
slug = "0.1.6"
r2d2 = "0.8.10"
r2d2-duckdb = "0.1.0"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "sensei-store"
path = "src/main.rs"

