[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
async-stream = "0.3.6"
uuid = { version = "1.13.1", features = ["v4"] }
serde_json = "1.0.139"
actix-web = "4.9.0"
actix-cors = "0.7.0"
base64 = "0.22.1"
slug = "0.1.6"
async-trait = "0.1.88"
rand = { version = "0.9.0" }
sha2 = "0.10.8"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
tempfile = "3.19.1"
h2 = "0.4.10"
tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
postgres-types = { version = "0.2.10", features = ["derive", "with-chrono-0_4"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
graflog = "1.5.0"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "store"
path = "src/main.rs"

